css initial commit

--- a/0-home.html
+++ b/0-home.html
@@ -8,22 +8,26 @@
 
     <body>
         <div class="nav-menu">
-            <div><a href="0-home.html">Home</a></div>
-            <div><a href="1-contact.html">Contact</a></div>
-            <div><a href="2-upcoming.html">Upcoming</a></div>
-            <div><a href="3-prior-work.html">Prior Work</a></div>
+            <div><a href="0-home.html" id="nav-home">Home</a></div>
+            <div><a href="1-contact.html" id="nav-contact">Contact</a></div>
+            <div><a href="2-upcoming.html" id="nav-upcoming">Upcoming</a></div>
+            <div><a href="3-prior-work.html" id="nav-prior">Prior Work</a></div>
         </div>
 
         <h1>Welcome Home</h1>
 
-        <h2>Hi, my name is Sarah May.</h2>
+        <div class="page-content">
+            <h2>Hi, my name is Sarah May.</h2>
 
-        <h2>I used to make art!</h2>
+            <h2>I used to make art!</h2>
 
-        <h2>Now I still make art. With my mouth.</h2>
+            <h2>Now I still make art. With my mouth.</h2>
 
-        <img
-        src="Jungle.png"
-        alt="Sarah on stage with a microphone at the Jungle">
+            <div><img
+                src="Jungle.png"
+                alt="Sarah on stage with a microphone at the Jungle"
+                id="home-img">
+            </div>
+        </div>
     </body>
 </html>
