--- a/2-upcoming.html
+++ b/2-upcoming.html
@@ -8,15 +8,15 @@
 
     <body>
         <div class="nav-menu">
-            <div><a href="0-home.html">Home</a></div>
-            <div><a href="1-contact.html">Contact</a></div>
-            <div><a href="2-upcoming.html">Upcoming</a></div>
-            <div><a href="3-prior-work.html">Prior Work</a></div>
+            <div><a href="0-home.html" id="nav-home">Home</a></div>
+            <div><a href="1-contact.html" id="nav-contact">Contact</a></div>
+            <div><a href="2-upcoming.html" id="nav-upcoming">Upcoming</a></div>
+            <div><a href="3-prior-work.html" id="nav-prior">Prior Work</a></div>
         </div>
 
         <h1>What I'm Up to Next</h1>
 
-        <div>
+        <div class="page-content">
             <h2>Upcoming Shows!</h2>
                 <ul>
                     <li><a href="https://www.eventbrite.com/e/the-boston-tee-hee-party-presents-standup-comedy-at-the-trident-tickets-404239149177">9/3 - Boston Tee Hee Party at Trident</a></li>
