--- a/3-prior-work.html
+++ b/3-prior-work.html
@@ -8,20 +8,48 @@
 
     <body>
         <div class="nav-menu">
-            <div><a href="0-home.html">Home</a></div>
-            <div><a href="1-contact.html">Contact</a></div>
-            <div><a href="2-upcoming.html">Upcoming</a></div>
-            <div><a href="3-prior-work.html">Prior Work</a></div>
+            <div><a href="0-home.html" id="nav-home">Home</a></div>
+            <div><a href="1-contact.html" id="nav-contact">Contact</a></div>
+            <div><a href="2-upcoming.html" id="nav-upcoming">Upcoming</a></div>
+            <div><a href="3-prior-work.html" id="nav-prior">Prior Work</a></div>
         </div>
 
         <h1>What I Used to Do</h1>
 
-        <img src=lady-1.jpg>
-        <img src=lady-2.jpg>
-        <img src=lady-3.jpg>
-        <img src=lady-4.jpg>
-        <img src=lady-5.jpg>
-        <img src=lady-6.jpg>
+        <div class="page-content">
+            <div class="wall-art">
+                <div id="lady-1">
+                    <a href="lady-1.jpg" target="_blank">
+                    <img src=lady-1.jpg></a>
+                    <p>Lady 1</p>
+                </div>
+                <div id="lady-2">
+                    <a href="lady-2.jpg" target="_blank">
+                    <img src=lady-2.jpg></a>
+                    <p>Lady 2</p>
+                </div>
+                <div id="lady-3">
+                    <a href="lady-3.jpg" target="_blank">
+                    <img src=lady-3.jpg></a>
+                    <p>Lady 3</p>
+                </div>
+                <div id="lady-4">
+                    <a href="lady-4.jpg" target="_blank">
+                    <img src=lady-4.jpg></a>
+                    <p>Lady 4</p>
+                </div>
+                <div id="lady-5">
+                    <a href="lady-5.jpg" target="_blank">
+                    <img src=lady-5.jpg></a>
+                    <p>Lady 5</p>
+                </div>
+                <div id="lady-6">
+                    <a href="lady-6.jpg" target="_blank">
+                    <img src=lady-6.jpg></a>
+                    <p>Lady 6</p>
+                </div>
+            </div>
+        </div>
 
     </body>
 </html>
