--- a/2-upcoming.html
+++ b/2-upcoming.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="nav-menu">
-            <div><a href="0-home.html" id="nav-home">Home</a></div>
+            <div><a href="index.html" id="nav-home">Home</a></div>
             <div><a href="1-contact.html" id="nav-contact">Contact</a></div>
             <div><a href="2-upcoming.html" id="nav-upcoming">Upcoming</a></div>
             <div><a href="3-prior-work.html" id="nav-prior">Prior Work</a></div>
